# badger-analytics

./: .gitignore  README.md  pyproject.toml  setup.cfg  setup.py
badger_analytics/: __init__.py  main.py
badger_analytics/processing/: __init__.py  data_import.py  feature_scaling.py  standardization.py
badger_analytics/regression/: linear.py
banalytics/: __init__.py  data_import.py
banalytics/processing/: __init__.py  feature_scaling.py
banalytics/regression/: __init__.py  linear.py  polynomial.py
tests/: test_linear_regression.py  test_regression.py
tests/test_import/: ex_import  test_import.py
tests/test_processing/: test_processing.py
tests/test_regression/: test_linear_model.py  test_linear_regression.py  test_polynomial_model.py
