[metadata]
# replace with your username:
name = badger-analytics-jwjbadger
version = 0.0.1
author = Joseph Johnson
author_email = jwjbadger@gmail.com
description = A basic data analysis package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jwjbadger/badger-analytics
classifiers =
    Programming Language :: Python :: 3
    License :: GNU GPLv3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9